api-doc adjustments for the second Round
